2013-11-14  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.11

2013-11-13  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_state.c: test_log_serialise():
	  - Added extra checks on nih_io_watches.
	  - Need to wait for logfile to be written to handle case where
	    NIH encounters EAGAIN.
	* test/test_util_common.h:
	  - Removed unused macros:
	    - TEST_FORCE_WATCH_UPDATE_TIMEOUT()
	    - TEST_FORCE_WATCH_UPDATE_TIMEOUT_SECS()
	  - Added TIMED_BLOCK() macro.

2013-11-12  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/socket-event.7: PATH => SOCKET_PATH.
	* init/Makefile.am:
	  - Unset DBUS_SYSTEM_BUS_ADDRESS
	  - Explain unsetting vars.
	  - test_xdg: link to libtest_util_common.
	* init/tests/test_main.c:
	  - Include config.h to avoid local NIH test run failure.
	  - Remove test-specific XDG_CONFIG_HOME/XDG_RUNTIME_DIR handling and
	    call test_common_setup() and test_common_cleanup() instead.
	* init/tests/test_xdg.c: Remove test-specific
	  XDG_CONFIG_HOME/XDG_RUNTIME_DIR handling and call test_common_setup()
	  and test_common_cleanup() instead.
	* test/test_util_common.c: Added test_common_setup() and
	  test_common_cleanup().
	* util/Makefile.am:
	  - Unset DBUS_SYSTEM_BUS_ADDRESS
	  - Explain unsetting vars.
	* util/tests/test_initctl.c: Remove test-specific
	  XDG_CONFIG_HOME/XDG_RUNTIME_DIR handling and call test_common_setup()
	  and test_common_cleanup() instead.

2013-11-04  James Hunt  <james.hunt@ubuntu.com>

	* test/test_util_common.h: WAIT_FOR_FILE(): Check @path not
	  logfile.
	* util/tests/test_initctl.c: test_reexec(): Fixed behaviour and
	  comments for test "ensure 'set-env --global' persists across
	  session-init re-exec".

2013-11-03  James Hunt  <james.hunt@ubuntu.com>

	* init/job_class.c:
	  - job_class_new(): Set umask for job to current value for Session
	    Init by default (LP: #1240686).
	* init/job_process.c: Comments.
	* init/main.c: main(): Save current umask.
	* test/test_util_common.c: